Increase width of dialog to avoid element wrapping

--- a/src/components/tools/geometry-tool/axis-settings-dialog.sass
+++ b/src/components/tools/geometry-tool/axis-settings-dialog.sass
@@ -1,4 +1,6 @@
 .axis-settings-dialog
+  &.bp3-dialog
+    width: 600px
 
   .nc-attribute-name-prompt
     .axis-prompt
